# parallel-programming

./: .buildinfo  .gitignore  00-distributed-memory.html  00-shared-memory.html  01-introduction.html  02-distribution-intro.html  03-distributed-examples-mpi4py.html  04-distributed-examples.html  05-shared-intro.html  06-shared-examples.html  README.md  _config.yml  genindex.html  index.html  index.md  lesson-list-table.xlsx  objects.inv  search.html  searchindex.js  setup.html  setup.md
.github/workflows/: build.yaml
_episodes/: 00-distributed-memory.rst  01-introduction.md  02-architecture.md  02-distributed-intro.md  02-distribution-intro.md  03-distributed-examples-mpi4py.md  03-distributed-intro.md  04-distributed-examples.md  05-shared-intro.md  06-shared-examples.md  07-heterogeneous.md  08-profiling.md  conf.py  index.rst  requirements.yaml  setup.csv  setup.md
_episodes/csv_tables/: distributed-memory.csv  intro.csv  lessons-list.xlsx  setup.csv  shared-memory.csv
_includes/: javascript.html
_sources/: 01-introduction.md.txt  02-distribution-intro.md.txt  03-distributed-examples-mpi4py.md.txt  04-distributed-examples.md.txt  06-shared-examples.md.txt
assets/css/: lesson.scss
examples/hybrid/: README.md
examples/mpi/: README.md  exchange1.cc  exchange2.cc  hello.cc  mpihello.pbs  mpihello_minimal.pbs  nest_par.cc  ring.cc  trapezoid_seq.cc
examples/mpi/average/: CMakeLists.txt  average.cpp
examples/mpi/mc/: CMakeLists.txt  mc.cpp
examples/mpi/mc/final/: mc.cpp
examples/mpi4py/: README.md
examples/old_mpi/: Makefile  client-server.cc  (+8 more)
(+82 files in other folders)
